# moha

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: RENDERING.md  UI.md  auth.md
docs/agent_panel/: 01_zed_anatomy.md  02_maya_reference.md  03_translation.md  04_architecture.md  05_design_tokens.md  06_message_stream.md  07_tool_cards.md  08_composer.md  09_permissions.md  10_diff_review.md  11_navigation.md  12_keymap.md  13_rebuild_playbook.md  README.md
docs/design/: streaming.md
include/moha/: model.hpp  msg.hpp  version.hpp.in
include/moha/auth/: auth.hpp
include/moha/diff/: diff.hpp
include/moha/domain/: catalog.hpp  conversation.hpp  id.hpp  profile.hpp  session.hpp  todo.hpp
include/moha/index/: repo_index.hpp
include/moha/io/: http.hpp  persistence.hpp  tls.hpp
include/moha/memory/: file_card_store.hpp  memo_store.hpp
include/moha/provider/: error_class.hpp  provider.hpp
include/moha/provider/anthropic/: oauth.hpp  provider.hpp  transport.hpp
include/moha/runtime/: airgap.hpp  command_palette.hpp  login.hpp  model.hpp  msg.hpp
include/moha/runtime/app/: cmd_factory.hpp  deps.hpp  program.hpp  subscribe.hpp  update.hpp
include/moha/runtime/app/update/: internal.hpp
include/moha/runtime/view/: cache.hpp  changes.hpp  composer.hpp  diff_review.hpp  helpers.hpp  login.hpp  palette.hpp  permission.hpp  pickers.hpp  statusbar.hpp  thread.hpp  tool_args.hpp  view.hpp
include/moha/runtime/view/thread/turn/: turn.hpp
include/moha/store/: store.hpp
include/moha/tool/: effects.hpp  registry.hpp  spec.hpp  tool.hpp  tools.hpp
include/moha/tool/util/: arg_reader.hpp  bash_validate.hpp  fs_helpers.hpp  glob.hpp  partial_json.hpp  subprocess.hpp  tool_args.hpp  utf8.hpp
packaging/arch/: PKGBUILD.in
src/: auth.cpp
src/app/: cmd_factory.cpp  update.cpp
src/diff/: diff.cpp
src/index/: repo_index.cpp
src/io/: anthropic.cpp  auth.cpp  http.cpp  persistence.cpp  tls.cpp
src/memory/: file_card_store.cpp  memo_store.cpp
src/provider/anthropic/: transport.cpp
src/runtime/: airgap.cpp  main.cpp
src/runtime/app/: cmd_factory.cpp  deps.cpp  init.cpp  subscribe.cpp  update.cpp
src/runtime/app/update/: compact.cpp  login.cpp  modal.cpp  stream.cpp  tool.cpp
src/runtime/view/: cache.cpp  changes.cpp  composer.cpp  diff_review.cpp  helpers.cpp  login.cpp  permission.cpp  pickers.cpp  statusbar.cpp  thread.cpp  tool_args.cpp  tool_card.cpp  view.cpp
src/runtime/view/thread/: conversation.cpp
src/runtime/view/thread/turn/: turn.cpp
src/tool/: registry.cpp
src/tool/tools/: bash.cpp  diagnostics.cpp  edit.cpp  find_definition.cpp  git.cpp  glob.cpp  grep.cpp  investigate.cpp  list_dir.cpp  memos.cpp  outline.cpp  read.cpp  repo_map.cpp  signatures.cpp  todo.cpp  web_fetch.cpp  web_search.cpp  write.cpp
src/tool/util/: arg_reader.cpp  bash_validate.cpp  fs_helpers.cpp  glob_match.cpp  partial_json.cpp  sandbox.cpp  subprocess.cpp  utf8.cpp
src/view/: thread.cpp
tests/: reducer_tests.cpp  wire_smoke.cpp
